--- a/instructions.html
+++ b/instructions.html
@@ -35,6 +35,14 @@
       .rightImg > img {
         width: 100%;
       }
+      .centerImg{
+        width: 50%;
+        display: block;
+        margin: 60px auto 0;
+      }
+      .centerImg > img {
+        width: 100%;
+      }
     </style>
   </head>
   <body>
